Se agrego el postwork clase 2

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+:root {
+  font-family: 'Work Sans', sans-serif;
+}
+
 p {
   color: #46484c;
 }
@@ -14,9 +18,10 @@ button {
   background-color: #025157;
 }
 
-h1 {
+h1,h2,h3,h4,h5,h6 {
   color: #46484c;
   text-align: center;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .imagen {
