--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,83 @@
 :root {
   font-family: 'Work Sans', sans-serif;
-}
-
-p {
-  color: #46484c;
+  --color-primary: #025157;
+  --color-secondary: yellow;
+  --text-primary: #025157;
+  --text-secondary: #46484c;
+  --page-background: #fffbf7;
 }
 
 body {
-  background: #fffbf7;
+  background: var(--page-background);
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
-button {
-  color: #fff;
-  background-color: #025157;
-}
-
 h1,h2,h3,h4,h5,h6 {
   color: #46484c;
   text-align: center;
   font-family: 'Quicksand', sans-serif;
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 70%;
+  margin-bottom: 1em;
+  border-bottom: 1px solid var(--color-primary);
+  border-top: 1px solid var(--color-primary);
+}
+.links {
+  display: flex;
+  justify-content: center;
+  gap: 2;
+  align-items: center;
+}
+
+p {
+  color: var(--text-secondary);
+}
+
+.btn {
+  background-color: var(--color-primary);
+  color: white;
+}
+
+.contenedor {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/* button {
+  color: #fff;
+  background-color: #025157;
+} */
+
+.form-control {
+  display: inline-block;
+}
+.form-control > input[type="email"] {
+  min-width: 200px;
+}
+
+form > button {
+  display: inline-block;
+}
+
 .imagen {
-  margin-top: 5em;
+  margin-top: 2rem;
   padding: 1em;
-  border: #025157 dashed 2px;
+  border: var(--color-primary) dashed 2px;
   max-width: 500px;
 }
 
 .logo {
   max-width: 100px;
+  vertical-align: middle;
 }
 
-nav {
-  width: 70%;
-  padding-bottom: 1em;
-  border-bottom: 1px solid #025157;
-}
+
 
 ul {
   list-style-type: none;
@@ -66,10 +104,10 @@ li {
   padding: 0 1em;
 }
 
-img {
+/* img {
   display: inline-block;
   vertical-align: middle;
-}
+} */
 
 /* li {
     text-decoration: none;
