--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ nav {
   width: 70%;
   margin-bottom: 1em;
   border-bottom: 1px solid var(--color-primary);
-  border-top: 1px solid var(--color-primary);
+  /* border-top: 1px solid var(--color-primary); */
 }
 .links {
   display: flex;
@@ -42,6 +42,8 @@ p {
 .btn {
   background-color: var(--color-primary);
   color: white;
+  padding: 0.5rem;
+  border-radius: 20%;
 }
 
 .contenedor {
@@ -56,6 +58,7 @@ p {
 
 .form-control {
   display: inline-block;
+  padding: 1rem;
 }
 .form-control > input[type="email"] {
   min-width: 200px;
@@ -102,6 +105,43 @@ li {
   display: inline-block;
   vertical-align: middle;
   padding: 0 1em;
+}
+
+.contenedor-video {
+  display: flex;
+  margin: 2rem 0;
+  justify-content: center;
+  padding-top: 1.5rem;
+  padding-bottom: 2rem;
+  border-top: 1px dashed var(--color-primary);
+  border-left: 1px dashed var(--color-primary);
+  border-right: 1px dashed var(--color-primary);
+  border-radius: 15%;
+}
+
+.contenedor-video > div {
+  max-width: 35rem;
+  margin-left: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-content: start;
+}
+
+.contenedor-video > div img{
+  margin-left: 130px;
+}
+
+.fixed-nav {
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: var(--page-background);
+}
+
+form > p {
+  color: var(--text-primary);
+  opacity: 0.7;
 }
 
 /* img {
