Se agregaron las waves

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,24 @@
 :root {
   font-family: 'Work Sans', sans-serif;
   --color-primary: #025157;
-  --color-secondary: yellow;
+  --color-secondary: #ffd700;
+
   --text-primary: #025157;
   --text-secondary: #46484c;
   --page-background: #fffbf7;
 }
 
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: var(--page-background);
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
 }
 h1,h2,h3,h4,h5,h6 {
   color: #46484c;
@@ -24,7 +31,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   width: 70%;
-  margin-bottom: 1em;
+  margin: 1rem auto;
   border-bottom: 1px solid var(--color-primary);
   /* border-top: 1px solid var(--color-primary); */
 }
@@ -37,6 +44,7 @@ nav {
 
 p {
   color: var(--text-secondary);
+  padding: 0.5rem;
 }
 
 .btn {
@@ -109,7 +117,8 @@ li {
 
 .contenedor-video {
   display: flex;
-  margin: 2rem 0;
+  width: 80%;
+  margin: 2rem auto;
   justify-content: center;
   padding-top: 1.5rem;
   padding-bottom: 2rem;
@@ -144,11 +153,25 @@ form > p {
   opacity: 0.7;
 }
 
-/* img {
-  display: inline-block;
-  vertical-align: middle;
-} */
+.section-2 {
+  margin-bottom: 8rem;
+  position: relative;
+  width: 100%;
+}
 
-/* li {
-    text-decoration: none;
-} */
+.waves {
+  position: absolute;
+  left: 0;
+  bottom: -5rem;
+  width: 100%;
+  z-index: -1;
+}
+
+.contenedor-color {
+  position: relative;
+  top: -3rem;
+  width: 100%;
+  height: 100vh;
+  background: var(--color-secondary);
+}
+
