--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   font-family: 'Work Sans', sans-serif;
   --color-primary: #025157;
   --color-secondary: #ffd700;
+  --color-info: #87ceeb;
 
   --text-primary: #025157;
   --text-secondary: #46484c;
@@ -22,8 +23,10 @@ body {
 }
 h1,h2,h3,h4,h5,h6 {
   color: #46484c;
-  text-align: center;
   font-family: 'Quicksand', sans-serif;
+}
+.page-title {
+  text-align: center;
 }
 
 nav {
@@ -44,14 +47,15 @@ nav {
 
 p {
   color: var(--text-secondary);
-  padding: 0.5rem;
+  padding: 0.5rem 0;
+  line-height: 1.4;
 }
 
 .btn {
   background-color: var(--color-primary);
   color: white;
-  padding: 0.5rem;
-  border-radius: 20%;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
 }
 
 .contenedor {
@@ -145,7 +149,10 @@ li {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 50;
   background-color: var(--page-background);
+  padding: 1rem 1rem 1rem 1rem;
+  border-radius: 0 0 30px 30px;
 }
 
 form > p {
@@ -167,11 +174,150 @@ form > p {
   z-index: -1;
 }
 
-.contenedor-color {
+.section-color {
   position: relative;
   top: -3rem;
   width: 100%;
-  height: 100vh;
+  height: 200vh;
   background: var(--color-secondary);
 }
+.contenedor-color {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 8rem 5rem 3rem 5rem;
+  align-items: start;
+  width: 100%;
+  gap: 5em;
+}
 
+
+
+.card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  max-width: 25rem;
+}
+
+
+.card > img {
+  max-width: 100%;
+  border-radius: 20px 20px 0 0;
+}
+.card-body img{
+  max-width: 6rem;
+  position: absolute;
+  top: -4rem;
+  right: 1rem;
+  border-radius: 100%;
+}
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  flex-grow: 2;
+}
+.info > h2 {
+  font-size: 2.7rem;
+  font-weight: bolder;
+  text-align: start;
+}
+.info > .btn {
+  background-color: ll;
+}
+.info > img {
+  padding-top: 3rem;
+  max-width: 80%;
+}
+
+.card-body {
+  position: relative;
+  padding: 2rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  background-color: var(--page-background);
+  border-radius: 0 0 20px 20px;
+
+}
+.card-body p{
+  font-size: larger;
+  font-weight: 500;
+  /* word-spacing: 5px; */
+  line-height: 1.5;
+  padding: 0.5rem 0;
+}
+.card-body span{
+  font-size: small;
+  opacity: 0.7;
+  font-weight: 300;
+  /* word-spacing: 5px; */
+  padding: 1rem;
+}
+.card-body button{
+  font-weight: 700;
+  padding: 0.5rem 1rem;
+  background-color: var(--color-primary);
+  color: white;
+  align-self: stretch;
+  border-radius: 5px;
+}
+
+.grid-cards {
+  display: grid;
+  height: 40vh;
+  margin: 5rem 1rem;
+  grid-template-columns: repeat(2, minmax(200px, 1fr));
+  gap: 1.5rem;
+}
+
+.grid-cards > div {
+  background-color: var(--page-background);
+  border-radius: 15px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  padding: 1.5rem 0 1.5rem 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 3rem;
+}
+.card-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  text-align: start;
+}
+.card-info > img {
+  max-width: 3.5rem;
+  border-radius: 100%;
+}
+.card-info > a {
+  text-decoration: none;
+  color: var(--color-info);
+  font-weight: bold;
+  align-self: start;
+}
+.card-info > a:hover {
+  text-decoration: underline;
+}
+.card-image {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 1rem 0 1rem 1rem;
+  border-radius: 15px;
+  box-shadow: -5px 5px 4px rgba(0, 0, 0, 0.2);
+}
+.card-image img{
+  border-radius: 15px 0 0 15px;
+}
+
+
+@media (min-width: 1024px) {
+  .grid-cards{
+    margin: 5rem auto;
+    width: 85%;
+  }
+}
