--- a/styles.css
+++ b/styles.css
@@ -174,12 +174,19 @@ form > p {
   width: 100%;
   z-index: -1;
 }
+.wavesEnd {
+  position: absolute;
+  left: 0;
+  top: 100%;
+  width: 100%;
+  z-index: -1;
+}
 
 .section-color {
   position: relative;
   top: -3rem;
   width: 100%;
-  height: 200vh;
+  height: 190vh;
   background: var(--color-secondary);
 }
 .contenedor-color {
@@ -270,7 +277,7 @@ form > p {
   display: grid;
   height: 40vh;
   margin: 5rem 1rem;
-  grid-template-columns: repeat(2, minmax(200px, 1fr));
+  grid-template-columns: repeat(2, minmax(5rem, 1fr));
   gap: 1.5rem;
 }
 
@@ -282,13 +289,14 @@ form > p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 3rem;
+  gap: 2rem;
 }
 .card-info {
   display: flex;
   flex-direction: column;
   gap: 0.8rem;
   text-align: start;
+  width: 100%;
 }
 .card-info > img {
   max-width: 3.5rem;
@@ -306,13 +314,73 @@ form > p {
 .card-image {
   display: flex;
   justify-content: end;
+  min-width: 5rem;
+  width: 20rem;
   align-items: center;
   padding: 1rem 0 1rem 1rem;
-  border-radius: 15px;
+  border-radius: 15px 0 0 15px;
   box-shadow: -5px 5px 4px rgba(0, 0, 0, 0.2);
 }
 .card-image img{
   border-radius: 15px 0 0 15px;
+  width: 100%;
+}
+
+/* Planes */
+.plans-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: auto;
+  gap: 3rem;
+}
+.plans-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 65%;
+  gap: 1rem;
+}
+.plans-title > h2 {
+  font-size: 4rem;
+}
+.plans-title > p {
+  text-align: center;
+}
+.planes {
+  display: grid;
+  padding: 1rem;
+  margin: auto;
+  grid-template-columns: repeat(4, minmax(10rem, 1fr));
+  gap: 3rem;
+}
+.planes > .card {
+  position: relative;
+}
+.flecha {
+  position: absolute;
+  width: 5rem;
+  top: 50%;
+  left: 75%;
+}
+.flecha img {
+  width: 100%;
+  z-index: 5;
+}
+.planes .card-info {
+  display: flex;
+  flex-direction: column;
+  margin-top: 0.5rem;
+  gap: 0.5rem;
+  padding: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+.planes .card-info > h3 {
+  font-size: 1.8rem;
 }
 
 
