--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ nav {
   width: 100%;
   margin: 1rem auto;
   border-bottom: 1px solid var(--color-primary);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
   /* border-top: 1px solid var(--color-primary); */
 }
 nav > div {
@@ -192,15 +193,9 @@ form > button {
   font-size: 1.5rem;
   text-align: center;
 }
-/* .contenedor-video > div {
-  max-width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-content: start;
-} */
 
 .contenedor-video > div img{
-  margin-left: 8rem;
+  margin-left: 24rem;
   max-width: 5rem;
 }
 
@@ -429,429 +424,3 @@ form > p {
   font-size: 1.8rem;
 }
 
-
-
-/** dispositivos pequeños en vista landscape (horizontal) */
-/* @media (min-width: 640px) {
-  ...;
-}
- */
- 
-
-/* 
-
-
-*/
-
-@media (min-width: 768px) {
-  .grid-cards {
-    display: grid;
-    margin: 5rem 1rem;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-    gap: 1.5rem;
-  }
-
-  .contenedor-video {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-  .contenedor-video > .info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-  }
-  .contenedor-video > .info > h2 {
-    font-size: 1.5rem;
-    text-align: center;
-  }
-  .flecha {
-    left: 39%;
-  }
-
-}
-
-@media (min-width: 1024px) {
-  .grid-cards{
-    margin: 5rem auto;
-    width: 85%;
-  }
-  .nav-button {
-    display: none;
-  }
-  .nav-image {
-    width: 20%;
-  }
-  .nav-links {
-    display: flex;
-    flex-direction: row;
-    width: 80%;
-    justify-content: space-between;
-  }
-  
-} 
-
-/** dispositivos extra grandes (monitores grandes, tvs) */
-@media (min-width: 1280px) {
-  .page-title {
-    text-align: center;
-  }
-  
-  nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 70%;
-    margin: 1rem auto;
-    border-bottom: 1px solid var(--color-primary);
-    /* border-top: 1px solid var(--color-primary); */
-  }
-  .links {
-    display: flex;
-    justify-content: center;
-    gap: 2;
-    align-items: center;
-  }
-  
-  p {
-    color: var(--text-secondary);
-    padding: 0.5rem 0;
-    line-height: 1.4;
-  }
-  
-  .btn {
-    background-color: var(--color-primary);
-    color: white;
-    padding: 0.5rem 1rem;
-    border-radius: 10px;
-  }
-  
-  .contenedor {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  /* button {
-    color: #fff;
-    background-color: #025157;
-  } */
-  
-  .form-control {
-    display: inline-block;
-    padding: 1rem;
-  }
-  .form-control > input[type="email"] {
-    min-width: 200px;
-  }
-  
-  form > button {
-    display: inline-block;
-  }
-  
-  .imagen {
-    margin-top: 2rem;
-    padding: 1em;
-    border: var(--color-primary) dashed 2px;
-    max-width: 500px;
-  }
-  
-  .logo {
-    max-width: 100px;
-    vertical-align: middle;
-  }
-  
-  
-  
-  ul {
-    list-style-type: none;
-    display: inline-block;
-    vertical-align: middle;
-    width: 75%;
-    text-align: center;
-    margin: 0 auto;
-  }
-  
-  
-  /* .links {
-      width: 60%;
-  } */
-  
-  .btn.subscribe {
-    /* display: inline; */
-    width: 10%;
-  }
-  
-  li {
-    display: inline-block;
-    vertical-align: middle;
-    padding: 0 1em;
-  }
-  
-  .contenedor-video {
-    display: flex;
-    width: 80%;
-    margin: 2rem auto;
-    justify-content: center;
-    padding-top: 1.5rem;
-    padding-bottom: 2rem;
-    border-top: 1px dashed var(--color-primary);
-    border-left: 1px dashed var(--color-primary);
-    border-right: 1px dashed var(--color-primary);
-    border-radius: 15%;
-  }
-  
-  .contenedor-video > div {
-    max-width: 35rem;
-    margin-left: 3rem;
-    display: flex;
-    flex-direction: column;
-    align-content: start;
-  }
-  
-  .contenedor-video > div img{
-    margin-left: 130px;
-  }
-  
-  .fixed-nav {
-    position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 50;
-    background-color: var(--page-background);
-    padding: 1rem 1rem 1rem 1rem;
-    border-radius: 0 0 30px 30px;
-  }
-  
-  form > p {
-    color: var(--text-primary);
-    opacity: 0.7;
-  }
-  
-  .section-2 {
-    margin-bottom: 8rem;
-    position: relative;
-    width: 100%;
-  }
-  
-  .waves {
-    position: absolute;
-    left: 0;
-    bottom: -5rem;
-    width: 100%;
-    z-index: -1;
-  }
-  .wavesEnd {
-    position: absolute;
-    left: 0;
-    top: 100%;
-    width: 100%;
-    z-index: -1;
-  }
-  
-  .section-color {
-    position: relative;
-    top: -3rem;
-    width: 100%;
-    height: 190vh;
-    background: var(--color-secondary);
-  }
-  .contenedor-color {
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    padding: 8rem 5rem 3rem 5rem;
-    align-items: start;
-    width: 100%;
-    gap: 5em;
-  }
-  
-  
-  
-  .card {
-    display: flex;
-    flex-direction: column;
-    border-radius: 20px;
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
-    max-width: 25rem;
-  }
-  
-  
-  .card > img {
-    max-width: 100%;
-    border-radius: 20px 20px 0 0;
-  }
-  .card-body img{
-    max-width: 6rem;
-    position: absolute;
-    top: -4rem;
-    right: 1rem;
-    border-radius: 100%;
-  }
-  .info {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    flex-grow: 2;
-  }
-  .info > h2 {
-    font-size: 2.7rem;
-    font-weight: bolder;
-    text-align: start;
-  }
-  .info > .btn {
-    background-color: ll;
-  }
-  .info > img {
-    padding-top: 3rem;
-    max-width: 80%;
-  }
-  
-  .card-body {
-    position: relative;
-    padding: 2rem 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    background-color: var(--page-background);
-    border-radius: 0 0 20px 20px;
-  
-  }
-  .card-body p{
-    font-size: larger;
-    font-weight: 500;
-    /* word-spacing: 5px; */
-    line-height: 1.5;
-    padding: 0.5rem 0;
-  }
-  .card-body span{
-    font-size: small;
-    opacity: 0.7;
-    font-weight: 300;
-    /* word-spacing: 5px; */
-    padding: 1rem;
-  }
-  .card-body button{
-    font-weight: 700;
-    padding: 0.5rem 1rem;
-    background-color: var(--color-primary);
-    color: white;
-    align-self: stretch;
-    border-radius: 5px;
-  }
-  
-  .grid-cards {
-    display: grid;
-    height: 40vh;
-    margin: 5rem 1rem;
-    grid-template-columns: repeat(2, minmax(5rem, 1fr));
-    gap: 1.5rem;
-  }
-  
-  .grid-cards > div {
-    background-color: var(--page-background);
-    border-radius: 15px;
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
-    padding: 1.5rem 0 1.5rem 1.5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2rem;
-  }
-  .card-info {
-    display: flex;
-    flex-direction: column;
-    gap: 0.8rem;
-    text-align: start;
-    width: 100%;
-  }
-  .card-info > img {
-    max-width: 3.5rem;
-    border-radius: 100%;
-  }
-  .card-info > a {
-    text-decoration: none;
-    color: var(--color-info);
-    font-weight: bold;
-    align-self: start;
-  }
-  .card-info > a:hover {
-    text-decoration: underline;
-  }
-  .card-image {
-    display: flex;
-    justify-content: end;
-    min-width: 5rem;
-    width: 20rem;
-    align-items: center;
-    padding: 1rem 0 1rem 1rem;
-    border-radius: 15px 0 0 15px;
-    box-shadow: -5px 5px 4px rgba(0, 0, 0, 0.2);
-  }
-  .card-image img{
-    border-radius: 15px 0 0 15px;
-    width: 100%;
-  }
-  
-  /* Planes */
-  .plans-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    margin: auto;
-    gap: 3rem;
-  }
-  .plans-title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 65%;
-    gap: 1rem;
-  }
-  .plans-title > h2 {
-    font-size: 4rem;
-  }
-  .plans-title > p {
-    text-align: center;
-  }
-  .planes {
-    display: grid;
-    padding: 1rem;
-    margin: auto;
-    grid-template-columns: repeat(4, minmax(10rem, 1fr));
-    gap: 3rem;
-  }
-  .planes > .card {
-    position: relative;
-  }
-  .flecha {
-    position: absolute;
-    width: 5rem;
-    top: 50%;
-    left: 75%;
-  }
-  .flecha img {
-    width: 100%;
-    z-index: 5;
-  }
-  .planes .card-info {
-    display: flex;
-    flex-direction: column;
-    margin-top: 0.5rem;
-    gap: 0.5rem;
-    padding: 1rem;
-    align-items: center;
-    justify-content: center;
-  }
-  .planes .card-info > h3 {
-    font-size: 1.8rem;
-  }
-}
-
-@media (min-width: 1536px) {
-  ...;
-}
