--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1,6 +1,6 @@
 $font-primary: 'Work Sans', sans-serif;
-$color-primary:rgb(2, 81, 87);
-$color-secondary:rgb(255, 215, 0);
+$color-primary:#025157;
+$color-secondary:#ffd700;
 $color-info: rgb(135, 206, 235);
 
 $text-primary: rgb(2, 81, 87);
