--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,201 +1,170 @@
 @use 'global' as *;
 
-/* Responsividad de la pagina */
+/* styles.css es css puro, antes de usar sass, el resto de la pagina usara sass asi que por eso se hace un archivo a parte, para dejar styles.css como css puro */
 
+.call {
+  margin-top: 18rem;
+  padding-bottom: 2rem;
+  background-color: $color-secondary;
+  position: relative;
 
-
-/** dispositivos pequeños en vista landscape (horizontal) */
-/* @media (min-width: 640px) {
-  ...;
-}
- */
- 
-
-/* 
-
-
-*/
-
-@media (min-width: 768px) {
-    .grid-cards {
-      display: grid;
-      margin: 5rem 1rem;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 1.5rem;
-    }
-  
-    .contenedor-video {
-      padding-left: 2rem;
-      padding-right: 2rem;
-
-      > {
-        .info {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-
-            > h2 {
-                font-size: 1.5rem;
-                text-align: center;
-              }
-          }
-      }
-    }
-    .flecha {
-      left: 39%;
-    }
-  
-  }
-  
   @media (min-width: 1024px) {
-    .grid-cards{
-      margin: 5rem auto;
-      width: 85%;
-    }
-    .nav-button {
-      display: none;
-    }
-    .nav-image {
-      width: 20%;
-    }
-    .nav-links {
-      display: flex;
-      flex-direction: row;
-      width: 80%;
-      justify-content: space-between;
-    }
-    /* Safe^ */
-      
-      .imagen {
-        margin-top: 2rem;
-        padding: 1em;
-        border: var(--color-primary) dashed 2px;
-        max-width: 750px;
-      }
-      
-      .contenedor-video {
-        flex-direction: row;
-        align-items: center;
-        width: 95%;
-        margin: 2rem auto;
-        justify-content: center;
-        padding-top: 1.5rem;
-        padding-bottom: 2rem;
-        border-top: 1px dashed var(--color-primary);
-        border-left: 1px dashed var(--color-primary);
-        border-right: 1px dashed var(--color-primary);
-        border-radius: 15%;
+    margin-top: 25rem;
+  }
 
-        div:first-child {
-            order: 0;
+  .img-container {
+    position: absolute;
+    width: 20rem;
+    bottom: 80%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
 
-            img {
-                margin-left: 5rem;
-            }
-        }
-        
-      }
-      
-      .contenedor-color {
-        padding: 0 5rem;
-        width: 100%;
-        gap: 5em;
-      }
-      
-      .info > img {
-        max-width: 70%;
-      }
-      
-      .card {
-        display: flex;
-        flex-direction: column;
-        border-radius: 20px;
-        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
-        max-width: 25rem;
-      }
-      
-      .grid-cards {
-        grid-template-columns: repeat(2, minmax(5rem, 1fr));
-        gap: 1.5rem;
-      }
-      
-      
-      /* Planes */
-      .planes {
-        grid-template-columns: repeat(4, minmax(0, 1fr));
-      }
-      .flecha {
-        top: 50%;
-        left: 95%;
-      }
-      .flecha img {
-        transform: rotate(0deg);
-      }
-    
-  } 
-  
-  /** dispositivos extra grandes (monitores grandes, tvs) */
-  @media (min-width: 1280px) {
-    nav {
-      width: 70%;
+    @media (min-width: 768px) {
+      width: 30rem;
     }
-    
-    .contenedor-color {
-        flex-direction: row;
 
-        .info {
-            align-items: start;
+    @media (min-width: 1024px) {
+      width: 36rem;
+    }
 
-            > {
-                .btn {
-                    width: auto;
-                }
-            }
-        }
-    }
-    
-    .grid-cards {
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-
-      > {
-        div {
-            flex-direction: row;
-        }
-      }
-    }
-    .card-image {
-      /* min-width: 5rem;
-      align-items: center; */
-      width: 20rem;
-      padding: 1rem 0 1rem 1rem;
-      border-radius: 15px 0 0 15px;
-      box-shadow: -5px 5px 4px rgba(0, 0, 0, 0.2);
-
-      img {
-        border-radius: 15px 0 0 15px;
-      }
-    }
-    
-    /* Planes */
-    .plans-title {
-        width: 100%;
-        > h2 {
-            font-size: 4rem;
-        }
-        > p {
-            width: 60%;
-        }
-    }
-    .planes {
-      grid-template-columns: repeat(4, minmax(0, 1fr));
-    }
-    .flecha {
-      left: 95%;
+    img {
+      max-width: 100%;
     }
   }
+
+  h4 {
+    padding-top: 5rem;
+    font-size: 3rem;
+    font-weight: 800;
+    text-align: center;
+  }
+
+  form {
+    margin: 2rem;
+  }
+
+  p {
+    text-align: center;
+    color: white;
+  }
+
+}
+
+.input-button {
+  display: flex;
+  justify-content: center;
+  input {
+    padding: 1rem;
+    border: none;
+    border-radius: 10px 0 0 10px;
+    margin: 0;
+  }
+  button {
+    margin: 0;
+    padding: 1rem;
+    border: none;
+    background-color: $color-primary;
+    border-radius: 0 10px 10px 0;
+    color: $page-background;
+  }
+}
+
+footer {
+  background-color: $color-primary;
+  color: white;
+  display: flex;
+  padding: 3rem;
+  flex-direction: column;
+  align-items: center;
+
+  @media (min-width: 768px) {
+  padding: 3rem 20%;
+  }
+
+  h4 {
+    color: inherit;
+    font-size: 1.5rem;
+    margin: 1rem 0;
+  }
+
+  .input-button {
+    justify-content: start;
+    button {
+    background-color: $color-secondary;
+    color: $color-primary;
+    }
+  }
+
+  p {
+    color: inherit;
+    margin: 0.5rem auto;
+
+    a {
+      
+      text-decoration: none;
+      color: $color-secondary;
+      font-weight: bold;
+    }
+  }
+}
+
+.links {
+  display: grid;   
+  grid-template-columns: repeat(auto-fit, minmax(6rem,1fr));
+  width: 100%;
+  justify-items: center;
+  gap: 2rem;
   
-  @media (min-width: 1536px) {
+  @media (min-width: 640px) {
     
   }
+
+  div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    
+
+    a {
+    text-decoration: none;
+    color: $color-secondary
+    }
+  }
+}
+
+
+/* Animacion a los botones */
+.btn-animation {
+  position: relative;
+  transition: .3s ease all;
+  overflow: hidden;
+
+  span {
+    position: relative;
+    z-index: 2;
+    transition: .3s ease all;
+  }
+
+  &::before {
+    content: "";
+    background-color: rgba($color-secondary, 0.5);
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: .2s ease-in-out all;
+    z-index: 1;
+  }
+
+  &:hover {
+    &::before {
+      bottom: 0;
+    }
+  }
+  &:active {
+    border-color: rgba($color-secondary, 0.7);
+  }
+}
